feat: add documentation for page sub menu route
